<resources>
    <string name="app_name">BottomAppBar</string>
    <string name="action_favorite">Mark Favorite</string>
    <string name="action_search">Search</string>
    <string name="nav_item2">Navigation Item 2</string>
    <string name="nav_item1">Navigation Item 1</string>
    <string name="action_settings">Settings</string>


    <string name="action_sort">Sort</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_projects">Projects</string>
    <string name="action_inbox">Inbox</string>
    <string name="action_logout">Logout</string>

    <string name="lbl_close">Close</string>
    <string name="lbl_open">Open</string>

    <string name="license_1">Copyright 2018 Lucas Lima</string>
    <string name="license_2">Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at</string>
    <string name="license_3">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="license_4">Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

    <string name="about_version">Version: 1.0</string>
    <string name="about_connect">Connect</string>
    <string name="about_contact">Contact us</string>
    <string name="about_like_facebook">Like on Facebook</string>
    <string name="about_follow_git">Follow on Github</string>
    <string name="about_my_profile">Look at my Profile</string>
    <string name="about_rate_playstore">Rate us on Play Store</string>

    <string name="license_title">License</string>

    <string name="drawer_title">Android Jetpack</string>
    <string name="drawer_location">São Paulo, Brazil</string>

    <string name="principal_basic">basic</string>
    <string name="principal_duo">duo</string>
    <string name="principal_options">options</string>
    <string name="principal_right">right</string>
    <string name="principal_out">out</string>
    <string name="principal_side">side</string>
    <string name="principal_radius_max">radius max</string>
    <string name="principal_radius_min">radius min</string>
    <string name="principal_colored">colored</string>
    <string name="principal_padding">padding</string>
    <string name="principal_icon">icon</string>

</resources>


