<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background">


                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="50dp"
                    android:text="@string/principal_basic"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="130dp"
                    android:text="@string/principal_duo"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="210dp"
                    android:text="@string/principal_options"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="290dp"
                    android:text="@string/principal_right"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="370dp"
                    android:text="@string/principal_out"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="370dp"
                    android:text="@string/principal_side"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="450dp"
                    android:text="@string/principal_radius_max"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="530dp"
                    android:text="@string/principal_radius_min"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="610dp"
                    android:text="@string/principal_colored"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="690dp"
                    android:text="@string/principal_padding"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_11"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_layout_height"
                    android:layout_marginBottom="100dp"
                    android:layout_marginLeft="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:layout_marginTop="770dp"
                    android:text="@string/principal_icon"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="40dp">

            <android.support.design.bottomappbar.BottomAppBar
                android:id="@+id/bottom_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:backgroundTint="@color/colorPrimary"
                app:fabAlignmentMode="end"
                app:fabAttached="true"
                app:hideOnScroll="true"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/menu" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/info"
                app:layout_anchor="@id/bottom_app_bar" />

        </android.support.design.widget.CoordinatorLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/background_head"
        app:headerLayout="@layout/navigation_drawer_header"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation_drawer_items" />

</android.support.v4.widget.DrawerLayout>